<resources>
    <string name="app_name">ToDoList</string>
    <string name="placeholder">PH</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="new_item_name">New task</string>
    <string name="edit_item_name">Edit task</string>
    <string name="title_hint">Title</string>
    <string name="desc_hint">Description</string>
    <string name="picker_date">Date</string>
    <string name="save_button">Save</string>
    <string name="picker_time">Time</string>
    <string name="picker_time_title">Task target time</string>
    <string name="picker_date_title">Last day active</string>
    <string name="table_name">todo_item_table</string>
    <string name="toast_empty_title">Title must not be empty</string>
    <string name="type_work">WORK</string>
    <string name="type_fun">FUN</string>
    <string name="type_main">MAIN</string>
    <string-array name="todo_type_array">
        <item>Main</item>
        <item>Work</item>
        <item>Fun</item>
    </string-array>

</resources>